--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css.css">
     <title>JS-Start!</title>
 </head>
 <body>
+  <nav>
 <ul>
+  <li>
+    <a href="index.html">ДОМ</a>
+  </li>
   <li>
     <a href="task1/index.html">Задача 1</a>
   </li>
@@ -22,5 +27,9 @@
     <a href="task5/index.html">Задача 5</a>
   </li>
 </ul>
+</nav>
+<h1>ДОМ</h1>
+<h2>Домашнее задание  6( HW-03)</h2>
+
 </body>
-</html>-
+</html>
