--- a/task1/index.html
+++ b/task1/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css.css">
     <title>JS-Start. 1 задача</title>
 </head>
 <body>
+    <nav>
+        <ul>
+          <li>
+            <a href="../index.html">ДОМ</a>
+          </li>
+          <li>
+            <a href="#">Задача 1</a>
+          </li>
+          <li>
+            <a href="../task2/index.html">Задача 2</a>
+          </li>
+          <li>
+            <a href="../task3/index.html">Задача 3</a>
+          </li>
+          <li>
+            <a href="../task4/index.html">Задача 4</a>
+          </li>
+          <li>
+            <a href="../task5/index.html">Задача 5</a>
+          </li>
+        </ul>
+        </nav>
+        <h1>Задача 1</h1>
 <p>Посмотри в консоль, там что-то важное</p>
 </body>
 <script src="script.js"></script>
