--- a/task2/index.html
+++ b/task2/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css.css">
     <title>JS-Start. 2 задача</title>
 </head>
 <body>
-<p id="consoleLog">console.log</p>
+    <nav>
+        <ul>
+          <li>
+            <a href="../index.html">ДОМ</a>
+          </li>
+          <li>
+            <a href="../task1/index.html">Задача 1</a>
+          </li>
+          <li>
+            <a href="#">Задача 2</a>
+          </li>
+          <li>
+            <a href="../task3/index.html">Задача 3</a>
+          </li>
+          <li>
+            <a href="../task4/index.html">Задача 4</a>
+          </li>
+          <li>
+            <a href="../task5/index.html">Задача 5</a>
+          </li>
+        </ul>
+        </nav>
+        <h1>Задача 2</h1>
+<p id="consoleLog"><span>console.log</span></p>
 <code>
-    console.log("Текст, выведеный в консоль")
+  <strong>console.log</strong>("служит для вывода информации в консоль")
 </code>
-<p id="alert">Alert()</p>
+<p id="alert"><span>Alert()</span></p>
 <code>
-    alert('Текст')
+ <strong>alert</strong>('выводит на экран пользователя модальное окно с каким-нибудь текстом')
 </code>
-<p id="prompt">Prompt()</p>
+<p id="prompt"><span>Prompt()</span></p>
 <code>
-    prompt('текст')
+  <strong>prompt</strong>('выводит  на экран пользователя модальное окно c полем ввода и текстом-пояснением')
 </code>
+
+<p class="text hidden" id="text">  </p>
 <script src="script.js"></script>
 </body>
 </html>
