--- a/task4/index.html
+++ b/task4/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css.css">
     <title>JS-Start. 4 задача</title>
 </head>
 <body>
-<a href="#" id="test">Измените текст ссылки</a>
+    <nav>
+        <ul>
+          <li>
+            <a href="../index.html">ДОМ</a>
+          </li>
+          <li>
+            <a href="../task1/index.html">Задача 1</a>
+          </li>
+          <li>
+            <a href="../task2/index.html">Задача 2</a>
+          </li>
+          <li>
+            <a href="../task3/index.html">Задача 3</a>
+          </li>
+          <li>
+            <a href="#">Задача 4</a>
+          </li>
+          <li>
+            <a href="../task5/index.html">Задача 5</a>
+          </li>
+        </ul>
+        </nav>
+        <h1 style="margin-bottom: 100px;">Задача 4</h1>
+<p><a style="margin-left:0" href="#" id="test" class="link">Измените текст ссылки</a></p>
 <script src="script.js"></script>
 </body>
 </html>
