--- a/task5/index.html
+++ b/task5/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css.css">
     <title>JS-Start. 3 задача</title>
 </head>
 <body>
+    <nav>
+        <ul>
+          <li>
+            <a href="../index.html">ДОМ</a>
+          </li>
+          <li>
+            <a href="../task1/index.html">Задача 1</a>
+          </li>
+          <li>
+            <a href="../task2/index.html">Задача 2</a>
+          </li>
+          <li>
+            <a href="../task3/index.html">Задача 3</a>
+          </li>
+          <li>
+            <a href="../task4/index.html">Задача 4</a>
+          </li>
+          <li>
+            <a href="#">Задача 5</a>
+          </li>
+        </ul>
+        </nav>
+        <h1>Задача 5</h1>
+        <div class="form">
 <form action="#">
     <label>
         Текст
@@ -14,8 +39,9 @@
         Вывести текст в консоль и удалить из формы
     </button>
 </form>
+</div>
 <hr>
-<p>Введенный текст:</p>
+<h2>Введенный текст:</h2>
 <p id="duplicateField"></p>
 <script src="js.js"></script>
 </body>
