--- a/task3/index.html
+++ b/task3/index.html
@@ -2,11 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css.css">
     <title>JS-Start. 3 задача</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="trafficLight"></div>
+    <nav>
+        <ul>
+          <li>
+            <a href="../index.html">ДОМ</a>
+          </li>
+          <li>
+            <a href="../task1/index.html">Задача 1</a>
+          </li>
+          <li>
+            <a href="../task2/index.html">Задача 2</a>
+          </li>
+          <li>
+            <a href="#">Задача 3</a>
+          </li>
+          <li>
+            <a href="../task4/index.html">Задача 4</a>
+          </li>
+          <li>
+            <a href="../task5/index.html">Задача 5</a>
+          </li>
+        </ul>
+        </nav>
+        <h1>Задача 3</h1>
+        <br>
+<div id="trafficLight" style="transition: background-color 0.2s;"></div>
+
+
+
+
 <script src="script.js"></script>
+
 </body>
 </html>
